Fix alignment

--- a/frontend/scripts/react-components/shared/steps-tracker/steps-tracker.scss
+++ b/frontend/scripts/react-components/shared/steps-tracker/steps-tracker.scss
@@ -11,11 +11,15 @@ $circle-dot-size: $circle-size / 2;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-left: $segment-width - $circle-size;
+  margin-left: -$circle-dot-size;
 
   .steps-tracker-item-wrapper {
     width: $segment-width;
     position: relative;
+
+    &:last-child {
+      width: $circle-size;
+    }
 
     &.-active {
       .steps-tracker-circle {
